[PR] updated time counter to 12/09

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -69,7 +69,7 @@ endif;
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
             js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v3.1&appId=2199972683623007&autoLogAppEvents=1';
+            js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1&appId=2199972683623007&autoLogAppEvents=1';
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
@@ -196,6 +196,11 @@ endif;
         <main class="container">
             <div class="row">
                 <div class="col-12 m-auto" role="main">
+                    <div class="row">
+                        <div class="col-12 m-auto text-right">
+                            <div class="fb-like" data-href="https://art13.eu" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+                        </div>
+                    </div>
                     <?=($this->content);?>
                 </div>
             </div>
