[PR] stopata2 fb buttons

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -199,6 +199,7 @@ endif;
                     <div class="row">
                         <div class="col-12 m-auto text-right">
                             <div class="fb-like" data-href="https://art13.eu" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+                            <a href="<?=($this->currentLanguage()=='de_de')?'https://www.facebook.com/Stopacta2.Germany/':'https://www.facebook.com/Stopacta2.Europe/';?>" target="_blank" class="btn btn-success btn-sm"><?=$this->translate('Find us on Facebook');?></a>
                         </div>
                     </div>
                     <?=($this->content);?>
@@ -208,7 +209,7 @@ endif;
     </div>
 
 
-    <div id="form-fixed-save-observer" class="hidden navbar navbar-expand-md navbar-light  fixed-bottom" style="position:fixed;bottom:0px;background: #000000;">
+    <div id="form-fixed-save-observer" class="hidden navbar navbar-expand-md navbar-light fixed-bottom" style="position:fixed;bottom:0px;background: #000000;">
         <div class="container">
             <div class="row">
                 <div class="col-12 py-3">
