--- a/spa/src/Petition/templates/petition/petition-item.phtml
+++ b/spa/src/Petition/templates/petition/petition-item.phtml
@@ -44,10 +44,10 @@
             <a href="https://www.facebook.com/Stopacta2.Poland/" target="_blank">
                 <img class="w-100 mt-3" src="https://peticio.art13.eu/assets/img/org/39075613.png" alt="#stopACTA2" />
             </a>
-            <div class="d-flex justify-content-between">
-                <a class="btn btn-primary btn-sm mb-3 d-inline-block -justify-content-center mt-4" href="https://www.facebook.com/Stopacta2.Poland/" target="_blank"><?=$this->translate("Find us on Facebook");?></a>
-                <div class="fb-like d-inline-block " data-href="https://www.facebook.com/Stopacta2.Poland/" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>
-            </div>
+<!--            <div class="d-flex justify-content-between">-->
+<!--                <a class="btn btn-primary btn-sm mb-3 d-inline-block -justify-content-center mt-4" href="https://www.facebook.com/Stopacta2.Poland/" target="_blank">--><?//=$this->translate("Find us on Facebook");?><!--</a>-->
+<!--                <div class="fb-like d-inline-block " data-href="https://www.facebook.com/Stopacta2.Poland/" data-layout="box_count" data-action="like" data-size="large" data-show-faces="true" data-share="false"></div>-->
+<!--            </div>-->
             <hr />
         </div>
     </div>
