--- a/spa/src/Petition/templates/petition/petition-form-sign.phtml
+++ b/spa/src/Petition/templates/petition/petition-form-sign.phtml
@@ -59,11 +59,11 @@ $form->prepare();
                 <?=$this->formInput($form->get('submit'));?>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 mt-4">
-                <div class="fb-login-button" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
-            </div>
-        </div>
+<!--        <div class="row">-->
+<!--            <div class="col-12 mt-4">-->
+<!--                <div class="fb-login-button" data-max-rows="1" data-size="medium" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>-->
+<!--            </div>-->
+<!--        </div>-->
 
     </div>
 
