[FIX] added meta description

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -33,6 +33,10 @@ if($this->hasIdentity()):
 
 endif;
 
+$this->headMeta()->appendName('description', 'We are concerned, that the European Commission intends to introduce a new tool, allegedly to protect copyrights, and in fact to subordinate the information market to the largest media corporations.
+We are also deeply concerned that the some Members of the European Parliament have forgotten who they are working for, but that is another story...
+');
+
 ?>
 <!DOCTYPE html>
 <html>
