--- a/spa/src/Event/templates/event/event-list-item.phtml
+++ b/spa/src/Event/templates/event/event-list-item.phtml
@@ -1,25 +1,34 @@
 <div class="row p-0">
-    <div class="col-6  d-none d-md-inline-block block-desktop">
-        <h2 class="mb-2 display-4"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getCityGlobal():$details->getCity();?></h2>
-    </div>
-    <div class="col-6  d-none d-md-inline-block block-desktop">
-        <span class="float-md-right mt-1 mr-0" _data-countdown="2018/08/26 19:00"></span>
-    </div>
-    <div class="col-12  d-none d-md-inline-block block-desktop">
-        <h2 class="mb-2 display-5"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getNameGlobal():$details->getName();?></h2>
 
-        <div class="row p-0">
-            <div class="col-6">
-                <h3 class="mt-2"><?=$this->translate("Starts at"); ?> <?=$details->getDateStart();?></h3>
+    <div class="col-10 d-none d-md-inline-block block-desktop">
+        <div class="row">
+            <div class="col-6  d-none d-md-inline-block block-desktop">
+                <h2 class="mb-2 display-4"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getCityGlobal():$details->getCity();?></h2>
             </div>
-            <div class="col-6">
+            <div class="col-6  d-none d-md-inline-block block-desktop">
+                <span class="float-md-right mt-1 mr-0" _data-countdown="2018/08/26 19:00"></span>
+            </div>
+            <div class="col-12  d-none d-md-inline-block block-desktop">
+                <h2 class="mb-2 display-5"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getNameGlobal():$details->getName();?></h2>
 
+                <div class="row p-0">
+                    <div class="col-6">
+                        <h3 class="mt-2"><?=$this->translate("Starts at"); ?> <?=$details->getDateStart();?></h3>
+                    </div>
+                </div>
+
+                <a class="btn btn-success mt-4" href="<?=$details->getEventLinkExternal();?>" target="_blank"><?=$this->translate("See the Event on Facebook");?></a>
+                <a class="btn btn-info mt-4" href="<?=$details->getEventMapExternal();?>" target="_blank"><?=$this->translate("Find on Map");?></a>
             </div>
         </div>
-
-        <a class="btn btn-success mt-4" href="<?=$details->getEventLinkExternal();?>" target="_blank"><?=$this->translate("See the Event on Facebook");?></a>
-        <a class="btn btn-info mt-4" href="<?=$details->getEventMapExternal();?>" target="_blank"><?=$this->translate("Find on Map");?></a>
     </div>
+    <div class="col-2 d-none d-md-inline-block block-desktop text-right">
+        <a class="float-right" href="https://www.facebook.com/Stopacta2.Poland/" target="_blank">
+            <img class="w-100 mt-0" src="https://peticio.art13.eu/assets/img/org/39075613.png" alt="#stopACTA2" />
+        </a>
+    </div>
+
+
     <div class="col-12 d-inline-block d-md-none">
         <h2 class="mb-2 display-5"><?=($this->currentLanguage()!==$details->getLanguage())?$details->getNameGlobal():$details->getName();?></h2>
     </div>
