[PR] source code link in oeticios footer

--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -182,6 +182,7 @@ endif;
                 <div class="col-12">
                     <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
                         <li class="d-inline mr-4"><a class="text-muted" href="/privacy-policy"><?=$this->translate('Privacy Policy');?></a></li>
+                        <li class="d-inline mr-4"><a class="text-muted" href="https://github.com/secalith/spa-expressive/tree/master/spa" target="_blank"><?=$this->translate('Source Code');?></a></li>
                     </ul>
                 </div>
             </div>
