--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -183,6 +183,7 @@ endif;
                     <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
                         <li class="d-inline mr-4"><a class="text-muted" href="/privacy-policy"><?=$this->translate('Privacy Policy');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="https://github.com/secalith/spa-expressive/tree/master/spa" target="_blank"><?=$this->translate('Source Code');?></a></li>
+                        <li class="d-inline mr-4"><a class="text-muted" href="<?=$this->url('spa.auth.login');?>"><?=$this->translate('Sign In');?></a></li>
                     </ul>
                 </div>
             </div>
