--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -134,7 +134,34 @@ endif;
                     <div class="d-inline-block m-0 mt-2 p-0">
                         <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/09/12 12:00"></span>
                     </div>
+                    <?php if( $this->hasIdentity()):?>
+                        <ul class="navbar-nav navbar-right align-right">
 
+                            <li class="nav-item ml-3">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info"><?=$this->translate("Manage");?></button>
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="sr-only">Toggle Dropdown</span>
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="<?=$this->url('manager.petition.list')?>"><?=$this->translate("Petitions");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="<?=$this->url('manager.content.list')?>"><?=$this->translate("Content");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Show Content Paths");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Page SEO");?></a>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Settings");?></a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#"><?=$this->translate("Your Account");?></a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="nav-item ml-3">
+                                <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link btn btn-sm btn-secondary text-light"><?=$this->translate("Sign Out");?></a>
+                            </li>
+                        </ul>
+                    <?php endif;?>
                     <button type="button" class="navbar-toggler float-right " data-toggle="collapse" data-target="#navbarCollapse" aria-controls="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
