--- a/spa/src/Petition/templates/petition-admin/template-read.phtml
+++ b/spa/src/Petition/templates/petition-admin/template-read.phtml
@@ -1,24 +1,18 @@
 
     <div class="app-container app-template-read border-3">
         <div class="app-container-content p-4 p-md-5">
+
             <div class="app-container-header">
                 <?=$this->partial("common-admin-partial::partial-header",['heading'=>$data_template_model['heading'],'data'=>$resources]);?>
             </div>
+
             <hr />
-            <?=$this->getFormAttached(['form_read'=>$form],null,'form_read',true,$view_template_model['forms']['form_read']);?>
-
-
 
             <?php if($resources): ?>
-<?=var_dump($resources);;?>
-                <?php foreach($resources as $res):  ?>
-                    <?php
-                    var_dump($res);
-                    ?>
-                    <?php if(array_key_exists('partial',$res)): ?>
-                        <?php //$this->partial($res['service_config']['partial'],['resource'=>$res]);?>
-                    <?php endif;?>
-
+                <?php foreach($resources['list'] as $res): var_dump($res['service_config']['partial']); ?>
+                    <?php  if(array_key_exists('partial',$res['service_config'])): ?>
+                        <?php $this->partial($res['service_config']['partial'],['resource'=>$res]);?>
+                    <?php  endif;?>
                 <?php endforeach;?>
 
             <?php endif; ?>
