--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -121,7 +121,7 @@ We are also deeply concerned that the some Members of the European Parliament ha
                     </ul>
 
                     <div class="d-inline-block m-0 mt-2 p-0">
-                        <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/09/07 18:00"></span>
+<!--                        <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/09/07 18:00"></span>-->
                     </div>
 
                     <button type="button" class="navbar-toggler float-right " data-toggle="collapse" data-target="#navbarCollapse" aria-controls="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
