[PR] generator-xdd list

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -140,6 +140,7 @@ We are also deeply concerned that the some Members of the European Parliament ha
                                     <a class="dropdown-item" href="<?=$this->url('manager.event.list')?>"><?=$this->translate("Events");?></a>
                                     <a class="dropdown-item" href="<?=$this->url('manager.petition.list')?>"><?=$this->translate("Petitions");?></a>
                                     <a class="dropdown-item" href="<?=$this->url('manager.article.list')?>"><?=$this->translate("Articles");?></a>
+                                    <a class="dropdown-item" href="<?=$this->url('manager.generator-xdd.list')?>"><?=$this->translate("Generator-XDD");?></a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#"><?=$this->translate("Resources");?></a>
                                     <a class="dropdown-item" href="#"><?=$this->translate("Page SEO");?></a>
